--- a/rootfolder/css/style_dark.css
+++ b/rootfolder/css/style_dark.css
@@ -5,13 +5,13 @@
 /* Actual code starts here */
 
 body{
-    background-color:rgb(223, 216, 202);
-    color: rgb(15, 11, 0);
+    background-color: rgb(37, 37, 37);
+    color: antiquewhite;
 }
 
 .stylebutton{
-    background-color: rgb(223, 216, 202);
-    color:  rgb(15, 11, 0);
+    background-color: rgb(37, 37, 37);
+    color: antiquewhite;
     padding: 13px 20px;
     border: none;
     text-align: center;
@@ -24,7 +24,7 @@ body{
 .nav-bar {
     width: 100%;
     height: 50px;
-    background-color: rgb(231, 158, 0);
+    background-color: rgb(214, 147, 3);
     position: fixed;
 }
 
