--- a/rootfolder/css/style.css
+++ b/rootfolder/css/style.css
@@ -2,21 +2,27 @@
     margin: 0px;
     padding: 0px;
 }
+
 /* Actual code starts here */
 
-body{
-    background-color:rgb(223, 216, 202);
-    color: rgb(15, 11, 0);
+html {
+    background: linear-gradient(rgba(53, 49, 49, 0.450), rgba(53, 49, 49, 0.450)), url(../images/background-cheers.jpg), no-repeat center center fixed;
+    background-size: cover;
 }
 
-.stylebutton{
-    background-color: rgb(223, 216, 202);
-    color:  rgb(15, 11, 0);
+body {
+    color: whitesmoke;
+    font-family: 'Open Sans Condensed', sans-serif;
+}
+
+.stylebutton {
+    background-color: inherit;
+    color: whitesmoke;
     padding: 13px 20px;
     border: none;
     text-align: center;
     font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 18px;
+    font-size: 24px;
     float: right;
     transform: translate(-20px);
 }
@@ -24,8 +30,17 @@ body{
 .nav-bar {
     width: 100%;
     height: 50px;
-    background-color: rgb(231, 158, 0);
     position: fixed;
+}
+
+.nav-bar-bottom-border {
+    width: 80%;
+    height: 2px;
+    margin: 0px auto;
+    border-bottom: 1px solid whitesmoke;
+    position: fixed;
+    top: 50px;
+    left: 10%;
 }
 
 .nav-bar ul {
@@ -39,7 +54,7 @@ body{
     margin: 15px auto;
     padding-right: 15px;
     line-height: 100%;
-} 
+}
 
 .nav-bar ul li a {
     text-decoration: none;
@@ -49,11 +64,11 @@ body{
 
 main {
     padding-top: 50px;
-    
+
 }
 
 .main-wrapper {
-    margin: 0 auto; 
+    margin: 0 auto;
     width: 90%;
     /*background-color: #FFDAAB; */
     padding: 10px;
@@ -62,11 +77,6 @@ main {
 
 .main-wrapper h2 {
     text-align: center;
-}
-
-p {
-    font-family: 'Open Sans Condensed', sans-serif;
-    
 }
 
 .image-gallery {
@@ -84,4 +94,3 @@ p {
     filter: grayscale(100%);
     transform: scale(1.1);
 }
-
