Dividing index.html up to sections rather than using gallery.html and about-us.html

--- a/rootfolder/css/style_dark.css
+++ b/rootfolder/css/style_dark.css
@@ -69,6 +69,10 @@ p {
     
 }
 
+/* ---------------------------------- */
+/* GALLERY /*
+/* ---------------------------------- */
+
 .image-gallery {
     margin: 10px 50px;
 }
