--- a/rootfolder/css/style.css
+++ b/rootfolder/css/style.css
@@ -5,14 +5,20 @@
 
 /* Actual code starts here */
 
-html {
+header {
     background: linear-gradient(rgba(53, 49, 49, 0.450), rgba(53, 49, 49, 0.450)), url(../images/background-cheers.jpg), no-repeat center center fixed;
     background-size: cover;
+    background-position: center;
 }
+
 
 body {
     color: whitesmoke;
     font-family: 'Open Sans Condensed', sans-serif;
+}
+
+header {
+    height: 100vh;
 }
 
 .stylebutton {
@@ -30,7 +36,6 @@ body {
 .nav-bar {
     width: 100%;
     height: 50px;
-    position: fixed;
 }
 
 .nav-bar-bottom-border {
@@ -38,7 +43,6 @@ body {
     height: 2px;
     margin: 0px auto;
     border-bottom: 1px solid whitesmoke;
-    position: fixed;
     top: 50px;
     left: 10%;
 }
@@ -79,18 +83,35 @@ main {
     text-align: center;
 }
 
-.image-gallery {
-    margin: 10px 50px;
+
+/* ---------------------------------- */
+/* GALLERY /*
+/* ---------------------------------- */
+
+.gallery-main-wrapper {
+    box-sizing: border-box;
+    width: 100%;
+    margin-top: 0.5%;
 }
 
-.image-gallery img {
-    transition: 1s;
-    padding: 15px;
-    width: 108px;
-    height: 130px;
+.beer-showcase {
+    list-style: none;
+    width: 100%;
 }
 
-.image-gallery img:hover {
-    filter: grayscale(100%);
-    transform: scale(1.1);
+.beer-showcase li {
+    display: block;
+    float: left;
+    width: 25%;
+}
+
+.beer-photo {
+    width: 100%;
+    overflow: hidden;
+}
+
+.beer-photo img {
+    width: 100%;
+    height: auto;
+    transform: scale(1.1)
 }
