--- a/rootfolder/css/style.css
+++ b/rootfolder/css/style.css
@@ -71,7 +71,18 @@ header {
     text-decoration: none;
     display: block;
     color: #ffffff;
+    padding: 5px 5px;
 }
+
+
+.nav-bar ul li a:hover{
+    background-color: darkgray;
+}
+
+.nav-bar ul li a:active{
+    top: 5px;
+}
+
 
 .main-wrapper {
     margin: 0 auto;
@@ -149,4 +160,36 @@ section {
 .beer-photo img:hover {
     opacity: 1;
     transform: scale(1.06);
+}
+
+
+/*ABOUT-US PAGE*/
+
+.section-about-us {
+    background-color: cornsilk;
+    color: black;
+    text-align: center;
+
+}
+
+.us-gallery {
+    margin: 1em;
+    color: black;
+}
+
+.inline-block {
+    display: inline-block;
+    text-align: center;
+}
+
+.inline-block p{
+    font-size: 150%;
+    color: black;
+}
+
+.us-gallery img {
+    display: inline-block;
+    padding: 1em;
+    width: 260px;
+    height: 285px;
 }
