--- a/rootfolder/css/style_dark.css
+++ b/rootfolder/css/style_dark.css
@@ -1,22 +1,42 @@
 * {
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
+
 /* Actual code starts here */
 
-body{
-    background-color: rgb(37, 37, 37);
-    color: antiquewhite;
+html {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 22px;
+    color: whitesmoke;
+    text-rendering: optimizeLegibility;
 }
 
-.stylebutton{
+header {
+    background: linear-gradient(rgba(53, 49, 49, 0.450), rgba(53, 49, 49, 0.450)), url(../images/background-cheers.jpg), no-repeat center center fixed;
+    background-size: cover;
+    background-position: center;
+}
+
+body {
     background-color: rgb(37, 37, 37);
-    color: antiquewhite;
+    color: whitesmoke;
+    font-family: 'Open Sans Condensed', sans-serif;
+}
+
+header {
+    height: 100vh;
+}
+
+.stylebutton {
+    background-color: inherit;
+    color: whitesmoke;
     padding: 13px 20px;
     border: none;
     text-align: center;
     font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 18px;
+    font-size: 24px;
     float: right;
     transform: translate(-20px);
 }
@@ -24,14 +44,21 @@ body{
 .nav-bar {
     width: 100%;
     height: 50px;
-    background-color: rgb(214, 147, 3);
-    position: fixed;
+}
+
+.nav-bar-bottom-border {
+    width: 80%;
+    height: 2px;
+    margin: 0px auto;
+    border-bottom: 1px solid whitesmoke;
+    top: 50px;
+    left: 10%;
 }
 
 .nav-bar ul {
     margin-left: 25px;
     font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 24px;
+    font-size: 110%;
 }
 
 .nav-bar ul li {
@@ -39,7 +66,7 @@ body{
     margin: 15px auto;
     padding-right: 15px;
     line-height: 100%;
-} 
+}
 
 .nav-bar ul li a {
     text-decoration: none;
@@ -47,26 +74,36 @@ body{
     color: #ffffff;
 }
 
-main {
-    padding-top: 50px;
-    
-}
-
 .main-wrapper {
-    margin: 0 auto; 
+    margin: 0 auto;
     width: 90%;
     /*background-color: #FFDAAB; */
     padding: 10px;
 }
 
-
-.main-wrapper h2 {
+h2 {
+    font-size: 150%;
     text-align: center;
+    letter-spacing: 1px;
+}
+
+h3 {
+    font-size: 120%;
+    padding-bottom: 10px;
 }
 
 p {
-    font-family: 'Open Sans Condensed', sans-serif;
-    
+    font-size: 90%;
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+section {
+    padding: 30px 0;
 }
 
 /* ---------------------------------- */
@@ -74,7 +111,7 @@ p {
 /* ---------------------------------- */
 
 .section-gallery {
-    background-color: #e4e4e4;
+    background-color: #222222;
     color: rgb(120, 124, 126);
 }
 
@@ -113,4 +150,173 @@ p {
 .beer-photo img:hover {
     opacity: 1;
     transform: scale(1.06);
+}
+
+.lb-loader,.lightbox{
+    text-align:center;
+    line-height:0;
+    position:absolute;
+    left:0
+}
+body.lb-disable-scrolling{
+    overflow:hidden
+}
+.lightboxOverlay{
+    position:absolute;
+    top:0;
+    left:0;
+    z-index:9999;
+    background-color:#000;
+    filter:alpha(Opacity=80);
+    opacity:.8;display:none
+}
+.lightbox{width:100%;
+    z-index:10000;
+    font-weight:400;
+    outline:0
+}
+.lightbox .lb-image{
+    display:block;
+    height:auto;
+    max-width:inherit;
+    max-height:none;
+    border-radius:3px;
+    border:4px solid #fff
+}
+.lightbox a img{
+    border:none
+}
+.lb-outerContainer{
+    position:relative;
+    width:250px;
+    height:250px;
+    margin:0 auto;
+    border-radius:4px;
+    background-color:#fff
+}
+.lb-outerContainer:after{
+    content:"";
+    display:table;
+    clear:both
+}
+.lb-loader{
+    top:43%;
+    height:25%;
+    width:100%
+}
+.lb-cancel{
+    display:block;
+    width:32px;
+    height:32px;
+    margin:0 auto;
+    background:url(../images/loading.gif) no-repeat
+}
+.lb-nav{
+    position:absolute;
+    top:0;
+    left:0;
+    height:100%;
+    width:100%;
+    z-index:10
+}
+.lb-container>.nav{
+    left:0
+}
+.lb-nav a{
+    outline:0;
+    background-image:url(data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==)
+}
+.lb-next,.lb-prev{
+    height:100%;
+    cursor:pointer;
+    display:block
+}
+.lb-nav a.lb-prev{
+    width:34%;
+    left:0;
+    float:left;
+    background:url(../images/prev.png) left 48% no-repeat;
+    filter:alpha(Opacity=0);
+    opacity:0;
+    -webkit-transition:opacity .6s;
+    -moz-transition:opacity .6s;
+    -o-transition:opacity .6s;
+    transition:opacity .6s
+}
+.lb-nav a.lb-prev:hover{
+    filter:alpha(Opacity=100);
+    opacity:1
+}
+.lb-nav a.lb-next{
+    width:64%;
+    right:0;
+    float:right;
+    background:url(../images/next.png) right 48% no-repeat;
+    filter:alpha(Opacity=0);
+    opacity:0;
+    -webkit-transition:opacity .6s;
+    -moz-transition:opacity .6s;
+    -o-transition:opacity .6s;
+    transition:opacity .6s
+}
+.lb-nav a.lb-next:hover{
+    filter:alpha(Opacity=100);
+    opacity:1
+}
+.lb-dataContainer{
+    margin:0 auto;
+    padding-top:5px;
+    width:100%;
+    border-bottom-left-radius:4px;
+    border-bottom-right-radius:4px
+}
+.lb-dataContainer:after{
+    content:"";
+    display:table;
+    clear:both
+}
+.lb-data{
+    padding:0 4px;
+    color:#ccc
+}
+.lb-data .lb-details{
+    width:85%;
+    float:left;
+    text-align:left;
+    line-height:1.1em
+}
+.lb-data .lb-caption{
+    font-size:13px;
+    font-weight:700;
+    line-height:1em
+}
+.lb-data .lb-caption a{
+    color:#4ae
+}
+.lb-data .lb-number{
+    display:block;
+    clear:left;
+    padding-bottom:1em;
+    font-size:12px;
+    color:#999
+}
+.lb-data .lb-close{
+    display:block;
+    float:right;
+    width:30px;
+    height:30px;
+    background:url(../images/close.png) top right no-repeat;
+    text-align:right;
+    outline:0;
+    filter:alpha(Opacity=70);
+    opacity:.7;
+    -webkit-transition:opacity .2s;
+    -moz-transition:opacity .2s;
+    -o-transition:opacity .2s;
+    transition:opacity .2s
+}
+.lb-data .lb-close:hover{
+    cursor:pointer;
+    filter:alpha(Opacity=100);
+    opacity:1
 }
