--- a/rootfolder/css/style.css
+++ b/rootfolder/css/style.css
@@ -360,3 +360,12 @@ body.lb-disable-scrolling{
     width: 260px;
     height: 285px;
 }
+
+#homeButton{
+    position: fixed;
+    width:50px;
+	height:50px;
+	bottom:10px;
+	right:10px;
+    color: tomato;
+}
