--- a/rootfolder/css/style_dark.css
+++ b/rootfolder/css/style_dark.css
@@ -73,6 +73,11 @@ header {
     text-decoration: none;
     display: block;
     color: cornsilk;
+    padding: 5px 5px;
+}
+
+.nav-bar ul li a:hover{
+    background-color: black;
 }
 
 .main-wrapper {
@@ -331,6 +336,12 @@ body.lb-disable-scrolling{
 
 }
 
+.section-about-us h3{
+    padding: 2em;
+    font-style: italic;
+    letter-spacing: 2px;
+}
+
 .us-gallery {
     margin: 1em;
     color: cornsilk;
@@ -351,4 +362,14 @@ body.lb-disable-scrolling{
     padding: 1em;
     width: 260px;
     height: 285px;
+}
+
+
+#homeButton{
+    position: fixed;
+    width:50px;
+	height:50px;
+	bottom:10px;
+	right:10px;
+    color: tomato;
 }
