--- a/rootfolder/css/style.css
+++ b/rootfolder/css/style.css
@@ -156,13 +156,15 @@ section {
 .beer-showcase li {
     display: block;
     float: left;
-    width: 25%;
+    width: calc(25% - 4px);
+    margin: 2px;
 }
 
 .beer-photo {
     width: 100%;
     overflow: hidden;
     background-color: black;
+
 }
 
 .beer-photo img {
