--- a/rootfolder/css/style_dark.css
+++ b/rootfolder/css/style_dark.css
@@ -135,7 +135,8 @@ section {
 .beer-showcase li {
     display: block;
     float: left;
-    width: 25%;
+    width: calc(25% - 4px);
+    margin: 2px;
 }
 
 .beer-photo {
