--- a/rootfolder/css/style.css
+++ b/rootfolder/css/style.css
@@ -1,3 +1,4 @@
+/*Very simple reset styling.*/
 * {
     margin: 0px;
     padding: 0px;
@@ -6,6 +7,26 @@
 
 /* Actual code starts here */
 
+/*Style of the html*/
+
+.beerDescription{
+    width: 20vw;
+    font-size: 180%;
+}
+
+#beerlist > li{
+    margin: 60px;
+}
+
+
+td{
+    text-align: center;
+}
+
+.galleryImage{
+    max-width: 70%;
+}
+
 html {
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 22px;
@@ -13,11 +34,52 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+/*Style of the login section*/
+
+.login-box{
+    font-size: normal;
+    color: #000;
+    background:cornsilk;
+    width: 300px;
+    margin: 1em;
+    padding: 1em;
+    border: #88705e 5px solid; 
+    text-align: center;
+    float: right;
+}
+
+.login-box h2{
+    font-size: 1em;
+    color: rgb(41, 39, 39);
+}
+
+.login-box a {
+    color: #5188E8;
+}
+
+/*Style of the registration section*/ 
+
+.registration-box {
+    font-size: normal;
+    color: #000;
+    background:cornsilk;
+    width: 300px;
+    margin: auto;
+    margin-top: 5%;
+    padding: 1em;
+    border: #88705e 5px solid; 
+    text-align: center;
+}
+
+/*Style of the header*/
+
 header {
     background: linear-gradient(rgba(53, 49, 49, 0.450), rgba(53, 49, 49, 0.450)), url(../images/background-cheers.jpg), no-repeat center center fixed;
     background-size: cover;
     background-position: center;
 }
+
+/*Style of the body*/
 
 body {
     color: whitesmoke;
@@ -27,6 +89,8 @@ body {
 header {
     height: 100vh;
 }
+
+/*Style of the style button*/
 
 .stylebutton {
     background-color: inherit;
@@ -39,6 +103,15 @@ header {
     float: right;
     transform: translate(-20px);
 }
+
+.login-section{
+    margin: 0;
+    padding: 0;
+    height: 50px;
+    width: 100px;
+}
+
+/*Style of the navigation bar*/
 
 .nav-bar {
     width: 100%;
@@ -67,12 +140,14 @@ header {
     line-height: 100%;
 }
 
-.nav-bar ul li a {
+.nav-bar ul li a{
     text-decoration: none;
     display: block;
     color: #ffffff;
     padding: 5px 5px;
 }
+
+
 .nav-bar ul li a:hover{
     background-color: darkgray;
 }
@@ -80,6 +155,9 @@ header {
 .nav-bar ul li a:active{
     top: 5px;
 }
+
+/*Style of the main-wrapper*/
+
 .main-wrapper {
     margin: 0 auto;
     width: 90%;
@@ -87,11 +165,15 @@ header {
     padding: 10px;
 }
 
+/*Style of h2*/
+
 h2 {
     font-size: 200%;
     text-align: center;
     letter-spacing: 1px;
 }
+
+/*Style of h3*/
 
 h3 {
     font-size: 180%;
@@ -123,25 +205,27 @@ section {
 
 .gallery-main-wrapper {
     width: 90%;
-    margin: 0 auto;
+    /*margin: 0 auto;*/
 }
 
 .beer-showcase {
     list-style: none;
     width: 100%;
-    margin: 20px auto;
+    margin: auto;
 }
 
 .beer-showcase li {
     display: block;
     float: left;
-    width: 25%;
+    width: calc(25% - 4px);
 }
 
 .beer-photo {
     width: 100%;
     overflow: hidden;
     background-color: black;
+    margin: auto;
+
 }
 
 .beer-photo img {
@@ -157,6 +241,14 @@ section {
     opacity: 1;
     transform: scale(1.06);
 }
+
+/* ---------------------------------- */
+/* LIGHTBOX /*
+/* ---------------------------------- */
+
+/*Lightbox is a script used to overlay images on the current page. 
+It's a snap to setup and works on all modern browsers.*/
+/* https://lokeshdhakar.com/projects/lightbox2/ */
 
 .lb-loader,.lightbox{
     text-align:center;
@@ -196,7 +288,7 @@ body.lb-disable-scrolling{
     position:relative;
     width:250px;
     height:250px;
-    margin:0 auto;
+    /*margin:0 auto;*/
     border-radius:4px;
     background-color:#fff
 }
@@ -270,7 +362,7 @@ body.lb-disable-scrolling{
     opacity:1
 }
 .lb-dataContainer{
-    margin:0 auto;
+    /*margin:0 auto;*/
     padding-top:5px;
     width:100%;
     border-bottom-left-radius:4px;
@@ -327,23 +419,23 @@ body.lb-disable-scrolling{
     opacity:1
 }
 
-
-
-
-/*ABOUT-US PAGE*/
+/*ABOUT-US SECTION STARTS HERE*/
 
 .section-about-us {
     background-color: cornsilk;
     color: black;
     text-align: center;
-
 }
+
+/*Style of the quote the bottom of the page.*/
 
 .section-about-us h3{
     padding: 2em;
     font-style: italic;
     letter-spacing: 2px;
 }
+
+/*Style of the about-us gallery*/
 
 .us-gallery {
     margin: 1em;
@@ -355,10 +447,14 @@ body.lb-disable-scrolling{
     text-align: center;
 }
 
+/*Style of the names below the images*/
+
 .inline-block p{
     font-size: 150%;
     color: black;
 }
+
+/*Style of the about-us images*/
 
 .us-gallery img {
     display: inline-block;
@@ -366,6 +462,8 @@ body.lb-disable-scrolling{
     width: 260px;
     height: 285px;
 }
+
+/*Style of the Home Button*/
 
 #homeButton{
     position: fixed;
